--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2",
+        "milon/barcode": "7",
         "spatie/laravel-permission": "^4.2",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
