--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2",
+        "maatwebsite/excel": "^3.1",
         "milon/barcode": "7",
         "spatie/laravel-permission": "^4.2",
         "yajra/laravel-datatables-oracle": "~9.0"
